feat: DroneQueryServiceUnitTest v3(test pathfinding only, not internal implementation)